--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
+    "react-h5-audio-player": "^3.8.6",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "sound-play": "^1.1.0",
