--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.1",
     "bootstrap-icons": "^1.9.1",
+    "firebase": "^9.12.1",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
     "react-h5-audio-player": "^3.8.6",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-sheet-music": "^0.0.1",
     "sound-play": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
